<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dK Walk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">dK Walk</string>
    <string name="pref_weight">Körpergewicht</string>
    <string name="total_way">gesamt Weg:</string>
    <string name="total_cal">gesamt Kalorien:</string>
    <string name="total_steps">gesamt Schritte:</string>
    <string name="total_duration">gesamt Dauer:</string>
    <string name="average_speed">Durchschnittsgeschwindigkeit:</string>
    <string name="start">Los gehts!</string>
    <string name="last_way">dein letzter Weg:</string>
    <string name="way">Weg:</string>
    <string name="steps">Schritte:</string>
    <string name="calories">Kalorien:</string>
    <string name="speed_short">Geschw.:</string>
    <string name="speed">Geschwindigkeit:</string>
    <string name="duration">Dauer:</string>
    <string name="title_activity_start_way">StartWayActivity</string>
    <string name="start2">Start</string>
    <string name="end">Ende</string>
    <string name="stop">Stop</string>
    <string name="active_way">zum aktiven Walk wechseln</string>
    <string name="go_overview">zur Übersicht</string>
    <string name="title_activity_overview">Übersicht</string>
    <string name="no_title">gelaufen</string>
    <string name="change_title">Titel ändern</string>
    <string name="OK">OK</string>
    <string name="cancel">abbrechen</string>
    <string name="delete">löschen</string>
    <string name="view">ansehen</string>
    <string name="title_activity_show_way">Way</string>
    <string name="total_ways">gelaufene Strecken:</string>
    <string name="title_activity_map">MapActivity</string>
	<string name="create_map">erstelle Karte</string>
</resources>
