<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF8800" >

    <Button
        android:id="@+id/stop"
        style="@style/ButtonRedButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:text="@string/stop" />

    <Button
        android:id="@+id/start"
        style="@style/ButtonGreenButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/stop"
        android:layout_alignBottom="@+id/stop"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/start2" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >

                <DigitalClock
                    android:id="@+id/digitalClock1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/digitalClock1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:paddingRight="30dp" >

                    <TextView
                        android:id="@+id/way"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/textView1"
                        android:layout_alignBottom="@+id/textView1"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/textView2"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/textView2"
                        android:layout_alignBottom="@+id/textView2"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/textView2"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView2"
                        android:layout_toLeftOf="@+id/speed"
                        android:text="@string/steps"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:layout_marginTop="17dp"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/steps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/textView3"
                        android:layout_alignBottom="@+id/textView3"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/textView3"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView3"
                        android:layout_toLeftOf="@+id/steps"
                        android:text="@string/calories"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:layout_marginTop="17dp"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/textView4"
                        android:layout_alignBottom="@+id/textView4"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/textView4"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/textView1"
                        android:text="@string/speed_short"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:layout_marginTop="17dp"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/textView2"
                        android:text="@string/way"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                    
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView4"
                        android:layout_toLeftOf="@+id/steps"
                        android:text="@string/duration"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:layout_marginTop="17dp"
                        android:textSize="22sp" />
                    
                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/textView5"
                        android:layout_alignBottom="@+id/textView5"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/textView5"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    
                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/stop"
        android:layout_alignTop="@+id/stop"
        android:layout_toLeftOf="@+id/start"
        android:layout_toRightOf="@+id/stop"
        android:src="@drawable/ic_action_pause" />

</RelativeLayout>